Fixed cross icon overlapping issue on search bar with normal and RTL view [#7117]

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/rtl.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/rtl.scss
@@ -346,7 +346,7 @@ body {
         }
 
         .account-content .account-layout .account-table-content input[type=search] {
-            padding-right: 35px;
+            padding-left: 40px;
         }
 
         .image-wrapper.image-wrapper .image-item {
